# jlink-zephyr

./: CMakeLists.txt  README.md  zephyr_plugin.c
.github/workflows/: build.yml
JLinkGDBServer_RTOSPlugin_SDK_V120/: JLINKARM_Const.h  License.txt  RTOSPlugin.h  TYPES.h
unittests/: CMakeLists.txt  plugin_test.c
